--- a/bootstrap-5.2.0-dist/css/css.css
+++ b/bootstrap-5.2.0-dist/css/css.css
@@ -96,3 +96,70 @@ body {
 .navbar-header button.navbar-toggle {
     clear: both;
 }
+
+.container .jumbotron {
+    box-shadow: 0 0 50px #3F0C1F;
+    border: 2px solid #3F0C1F;
+}
+
+@media (min-width: 1200px) {
+    .container .jumbotron {
+        background-image: url('../../images/jumbotron/jumbotron1920.jpg');
+        height: 675px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .container .jumbotron {
+        background-image: url('../../images/jumbotron/jumbotron992.jpg');
+        height: 558px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .navbar-brand {
+        padding-top: 10px;
+        height: 80px;
+    }
+    .navbar-brand h1 {
+        padding-top: 10px;
+        font-size: 5vw;
+    }    
+    .navbar-brand p {
+        font-size: 0.6em;
+        margin-top: 12px;
+    }
+    .container .jumbotron {
+        background-image: url('../../images/jumbotron/jumbotron768.jpg');
+        height: 432px;
+    }
+}
+
+@media (max-width: 767px) {
+    #collapsable-nav a {
+        font-size: 1.2em;
+    }
+    #collapsable-nav a span {
+        font-size: 1em;
+        margin-right: 5px;
+    }
+    #call-btn > a {
+        font-size: 1.5em;
+        display: block;
+        margin: 0 20px;
+        padding: 10px;
+        border: 2px solid #fff;
+        background-color: #f6b319;
+        color: #951c49;
+      }
+      #xs-deliver {
+        margin-top: 5px;
+        font-size: .7em;
+        letter-spacing: .1em;
+        text-transform: uppercase;
+      }
+      .container .jumbotron {
+        margin-top: 30px;
+        padding: 0;
+      }
+}
