--- a/bootstrap-5.2.0-dist/css/css.css
+++ b/bootstrap-5.2.0-dist/css/css.css
@@ -138,6 +138,40 @@ body {
     opacity: .8;
 }
 
+.panel-footer {
+    margin-top: 30px;
+    padding-top: 35px;
+    padding-bottom: 30px;
+    background-color: #222;
+    border-top: 0;
+}
+
+.panel-footer div.row {
+    margin-bottom: 35px;
+}
+
+#hours, #address {
+    line-height: 2;
+}
+
+#hours > span, #address > span {
+    font-size: 1.3em;
+}
+
+#address p {
+    color: #557c3e;
+    font-size: .8em;
+    line-height: 1.8;
+}
+
+#testimonials {
+    font-style: italic;
+}
+
+#testimonials {
+    margin-top: 25px;
+}
+
 @media (min-width: 1200px) {
     .container .jumbotron {
         background-image: url('../../images/jumbotron/jumbotron1920.jpg');
