--- a/bootstrap-5.2.0-dist/css/css.css
+++ b/bootstrap-5.2.0-dist/css/css.css
@@ -232,4 +232,14 @@ body {
         margin-top: 30px;
         padding: 0;
       }
+      .panel-footer section {
+        margin-bottom: 30px;
+        text-align: center;
+      }
+      .panel-footer section:nth-child(3) {
+        margin-bottom: 0;
+      }
+      .panel-footer section hr {
+        width: 60%;
+      }
 }
