--- a/bootstrap-5.2.0-dist/css/css.css
+++ b/bootstrap-5.2.0-dist/css/css.css
@@ -100,6 +100,7 @@ body {
 .container .jumbotron {
     box-shadow: 0 0 50px #3F0C1F;
     border: 2px solid #3F0C1F;
+    background-color: #3F0C1F;
 }
 
 #menu-tile, #specials-tile, #map-tile {
@@ -172,6 +173,93 @@ body {
     margin-top: 25px;
 }
 
+.category-tile {
+    position: relative;
+    border: 2px solid #3F0C1F;
+    overflow: hidden;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto 15px;
+}
+
+.category-tile span {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    opacity: .8;
+}
+
+
+.category-tile:hover {
+    box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-categories-title + div {
+    margin-bottom: 50px;
+}
+
+.menu-item-tile {
+    margin-bottom: 25px;
+}
+
+.menu-item-tile hr {
+    width: 90%;
+}
+
+#single-category-title + div {
+    margin-bottom: 50px;
+}
+
+.menu-item-tile .menu-item-price {
+    font-size: 1.1em;
+    text-align: right;
+    margin-top: -15px;
+    margin-right: -15px;
+}
+
+.menu-item-tile .menu-item-price span {
+    font-size: .6em;
+}
+
+.menu-item-photo {
+    position: relative;
+    border: 2px solid #3F0C1F;
+    overflow: hidden;
+    padding: 0;
+    margin-right: -20px;
+    margin-left: auto;
+    margin-bottom: 20px;
+    max-width: 250px;
+}
+
+.menu-item-photo div {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 80px;
+    background-color: #557c3e;
+    text-align: center;
+}
+
+.menu-item-description {
+    padding-right: 30px;
+}
+
+h3.menu-item-title {
+    margin: 0 0 10px;
+}
+
+.menu-item-details {
+    font-size: .9em;
+    font-style: italic;
+}
+
 @media (min-width: 1200px) {
     .container .jumbotron {
         background-image: url('../../images/jumbotron/jumbotron1920.jpg');
@@ -242,4 +330,27 @@ body {
       .panel-footer section hr {
         width: 60%;
       }
+      .menu-item-tile .menu-item-photo {
+        margin: 0 auto 0;
+      }
+      .menu-item-tile .menu-item-description {
+        text-align: center;
+      }
+      .menu-item-tile .menu-item-price {
+        text-align: center;
+        margin-top: 15px;
+      }
+}
+
+@media (max-width: 479px) {
+    .col-xxs-12 {
+        position: relative;
+        min-height: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
+        float: left;
+        width: 100%;
+    }
+
+
 }
