--- a/bootstrap-5.2.0-dist/css/css.css
+++ b/bootstrap-5.2.0-dist/css/css.css
@@ -103,6 +103,10 @@ body {
     background-color: #3F0C1F;
 }
 
+#carousel {
+    margin-bottom: 30px;
+}
+
 #menu-tile, #specials-tile, #map-tile {
     height: 250px;
     width: 100%;
