--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
-  color: #557c3e;
+  color: rgb(85, 124, 62);
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
